[gd_scene load_steps=15 format=3 uid="uid://duktmkh43q26s"]

[ext_resource type="Script" path="res://scripts/minesweeper.gd" id="1_2cqnl"]
[ext_resource type="Texture2D" uid="uid://bp5qdpdtufykw" path="res://assets/background.png" id="2_xjbmr"]
[ext_resource type="PackedScene" uid="uid://c3kh52d1fxira" path="res://nodes/ui/in_game_menu.tscn" id="3_7q7fo"]
[ext_resource type="Texture2D" uid="uid://c14je27i8tu8l" path="res://assets/minesweeper.png" id="3_ashn8"]
[ext_resource type="Texture2D" uid="uid://boqmkywm7e4nt" path="res://assets/errors/Expl_1.png" id="4_vsk80"]
[ext_resource type="Texture2D" uid="uid://0ll1n6t84fid" path="res://assets/trash.png" id="4_y6cdl"]
[ext_resource type="Texture2D" uid="uid://0veq75b1e4m" path="res://assets/windows.png" id="5_ahfgv"]
[ext_resource type="Texture2D" uid="uid://dwjmp4kmvvap3" path="res://assets/errors/expl_2.png" id="5_grbhe"]
[ext_resource type="Texture2D" uid="uid://cps704pbefh8k" path="res://assets/errors/expl_3.png" id="6_54s0n"]
[ext_resource type="Texture2D" uid="uid://18uj1n1fdm8i" path="res://assets/errors/expl_4.png" id="7_bwokm"]
[ext_resource type="AudioStream" uid="uid://d3g4dah0xt88g" path="res://assets/sound/minesweeper_error.wav" id="8_ond7v"]

[sub_resource type="FontVariation" id="FontVariation_ub2ew"]

[sub_resource type="LabelSettings" id="LabelSettings_h0pmy"]
font = SubResource("FontVariation_ub2ew")
font_size = 55
font_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_1st8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_vsk80")
}, {
"duration": 1.0,
"texture": ExtResource("5_grbhe")
}, {
"duration": 1.0,
"texture": ExtResource("6_54s0n")
}, {
"duration": 1.0,
"texture": ExtResource("4_vsk80")
}, {
"duration": 1.0,
"texture": ExtResource("5_grbhe")
}, {
"duration": 1.0,
"texture": ExtResource("6_54s0n")
}, {
"duration": 1.0,
"texture": ExtResource("7_bwokm")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="World" type="Node2D"]
script = ExtResource("1_2cqnl")
map_size = Vector2(12, 12)
mines = 12

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(78, 74)
zoom = Vector2(2.145, 2.145)

[node name="Background" type="Sprite2D" parent="Camera2D"]
position = Vector2(15, -204)
texture = ExtResource("2_xjbmr")

[node name="Panel" type="Panel" parent="Camera2D/Background"]
modulate = Color(0.846982, 0.919255, 0.976129, 1)
self_modulate = Color(0, 0.843137, 1, 1)
offset_left = -577.0
offset_top = 379.0
offset_right = 580.0
offset_bottom = 436.0

[node name="InGameMenu" parent="Camera2D" instance=ExtResource("3_7q7fo")]
offset_left = -163.0
offset_top = -116.0
offset_right = -163.0
offset_bottom = -116.0
scale = Vector2(0.437146, 0.437146)

[node name="Trash" type="Sprite2D" parent="Camera2D"]
modulate = Color(0.431373, 1, 1, 1)
position = Vector2(-210.555, 189)
scale = Vector2(0.714911, 0.714911)
texture = ExtResource("4_y6cdl")

[node name="Windows" type="Sprite2D" parent="Camera2D"]
position = Vector2(-244.555, 189)
scale = Vector2(1.43058, 1.43058)
texture = ExtResource("5_ahfgv")

[node name="Minesweeper" type="Sprite2D" parent="."]
position = Vector2(80, 64)
texture = ExtResource("3_ashn8")

[node name="Timer" type="Label" parent="."]
offset_top = -55.0
offset_right = 232.0
offset_bottom = 21.0
scale = Vector2(0.327539, 0.304158)
text = "00:00"
label_settings = SubResource("LabelSettings_h0pmy")
horizontal_alignment = 1

[node name="Mines" type="Label" parent="."]
offset_left = 100.0
offset_top = -55.0
offset_right = 315.0
offset_bottom = 21.0
scale = Vector2(0.327539, 0.304158)
text = "0"
label_settings = SubResource("LabelSettings_h0pmy")
horizontal_alignment = 1

[node name="VictoryDelay" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
one_shot = true

[node name="EXPL_TIMER" type="Timer" parent="."]

[node name="EXPL_SPRITE" type="AnimatedSprite2D" parent="."]
visible = false
top_level = true
position = Vector2(74, 33)
sprite_frames = SubResource("SpriteFrames_1st8f")

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_ond7v")

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="VictoryDelay" to="." method="_on_delay_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
[connection signal="timeout" from="EXPL_TIMER" to="." method="_on_expl_timer_timeout"]
